--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+  <head>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
+<script src="https://rawgit.com/donmccurdy/aframe-extras/v2.1.1/dist/aframe-extras.loaders.min.js"></script> 
 
-</body>
+  </head>
+    <body>
+    <a-scene>
+      <a-sky color="lightblue"></a-sky>
+      
+
+      
+      <a-entity ply-model="src: mcl39.ply" position="-10.14373 -1.602 0.5068" rotation="-90 180 0"></a-entity>
+      <a-entity ply-model="src: track2.ply" position="-23.356 -20.60261 14.5558" rotation="-90 0 0" scale="10 10 10"></a-entity>
+      <a-entity ply-model="src: W16.ply" position="-11.39686 -1.602 5" rotation="-90 180 5"></a-entity>
+      <a-entity ply-model="src: sf 75.ply" position="-7.4638 -1.602 9.82505" rotation="-90 180 150"
+      animation="
+      property: rotation;
+      from: -90 180 150;
+      to: -90 180 100;
+      loop: true;"></a-entity>
+      <a-entity ply-model="src: sf 75.ply" position="-7.4638 -1.602 9.82505" rotation="-90 180 150" ></a-entity>
+    </a-scene>
+  </body>
 </html>
-
-
