--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <a-entity ply-model="src: mcl39.ply" position="-10.14373 -1.602 0.5068" rotation="-90 180 0"></a-entity>
       <a-entity ply-model="src: track2.ply" position="-23.356 -20.60261 14.5558" rotation="-90 0 0" scale="10 10 10"></a-entity>
       <a-entity ply-model="src: W16.ply" position="-11.39686 -1.602 5" rotation="-90 180 5"  animation="
-      property: rotation;
-      from: -90 180 150;
-      to: -90 180 100;
+      property: position;
+      from: -11.39686 1.602 5;
+      to:   ;
       loop: true;"></a-entity>
       
      
