--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <a-entity ply-model="src: track2.ply" position="-23.356 -20.60261 14.5558" rotation="-90 0 0" scale="10 10 10"></a-entity>
       <a-entity ply-model="src: W16.ply" position="-11.93175 -1.6 5" rotation="-90 180 5"
        animation="property: position; 
-       from: -11.39686 1.602 5; loop: NaN"
+       from: -11.39686 -1.602 5;
+       to: -11.39686 -1.602 5;
+        loop: true"
        ></a-entity>
       
      
