--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
          ></a-entity>
       
      
-      <a-entity ply-model="src: sf 75.ply" position="-6.2381 -1.602 8.07697" rotation="-90 180 180"></a-entity>
+      <a-entity ply-model="src: sf 75.ply" position="-6.2381 -1.602 8.07697" rotation="-90 180 180"
+      animation="
+      property: rotation;
+      from: -90 180 180;
+      to: -90 180 180;
+      loop: true;"
+      ></a-entity>
     </a-scene>
   </body>
 </html>
