--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       animation="
       property: rotation;
       from: -90 180 180;
-      to: -90 180 180;
+      to: -90 180 540;
+      dur: 5000;
       loop: true;"
       ></a-entity>
     </a-scene>
