--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       animation="
       property: rotation;
       from: -90 180 180;
-      to: -90 180 1980;
-      dur: 5000;
-      loop: true;"
+      to: -90 180 18180;
+      dur: 100000;
+      loop: false;"
       ></a-entity>
     </a-scene>
   </body>
