--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       
      
       <a-entity ply-model="src: sf 75.ply" position="-6.2381 -1.602 8.07697" rotation="-90 180 180"
-      animation="
-      property: rotation;
-      from: -90 180 180;
-      to: -90 180 18180;
-      dur: 100000;
-      loop: false;"
+      animation="property: position;
+      from: -6.2381 -1.602 8.07697;
+       to: -6.2381 -1.602 8.07697; 
+       dur: 5500;
+       loop: true"
+  
       ></a-entity>
     </a-scene>
   </body>
