--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
        to: -5.633 -1.602 9.629; 
        dur: 5500;
        loop: true"
+       animation="property: rotation;
+       from: -90 180 184;
+       to: -90 180 180;
+       dur: 5500;
+       loop: true"
   
       ></a-entity>
     </a-scene>
